# python_learn_record

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  tasks.py
ai2/: __init__.py
asr/: kimi_audio.py  model_prepare.py
autogent/: tool_test.py
baobao/: .gitignore  __init__.py  compute_word_time.py  del_doc_end_digist.py  output_docx_name.py  read_docx.py  rename_file.py  sum_target.py  sum_target2.py  test.py  test2.py  行转列.py
celery_demo/: __init__.py
celery_tasks/: config.py  main.py
celeryapp/: task.py
config/: __init__.py  docker_uwsgi_config.ini  supervisor.conf  uwsgi_config.ini
crawler/: __init__.py  pachong.py
data_stractures/: Trie.py  __init__.py
decorator/: test.py
flake/: .pre-commit-config.yaml  __init__.py
git_statistics/: github_commit_manager.py
kafka_learn/: consumer_main.py  kafka_consumer.py  kafka_manager.py  kafka_producer.py  middle_num.py  producer_main.py
leetcode/: 10正则表达式匹配.py  35搜索插入位置.py  8字符串转换整数.py  common.py  del_nums_repeat.py  delete_repeat_node.py  leetcode_6.py  list_num_add.py  longestPalindrome_leetcode5.py  longest_sub_string.py  merge_list.py  reverse_list.py  s_is_valid.py  tow_sum.py  公司命名.py  删除链表倒数第n个节点.py  剑指 Offer 10- I. 斐波那契数列.py  剑指Offer12矩阵中的路径.py  合并账户.py  得到最多分数的最少关卡数.py  最小化曼哈顿距离.py  最小栈元素.py  最小路径之和.py  最长递增路径.py  正则表达式匹配.py  盛最多水的容器11.py  移除元素_leetcode27.py
mcp_server/: math_add.py  send_message.py
mongo/: __init__.py  api_model_cache.py  base_document.py  mixin.py
nlp/: __init__.py  nltk_test.py
one_question_per_day/: __init__.py  超赞子字符串.py
redis_learn/: bloom.py  (+2 more)
(+74 files in other folders)
