[project]
name = "python-learn-record"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.6.4",
    "autogen-ext[mcp,openai]>=0.6.4",
    "ipython>=9.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pika>=1.3.2",
    "zmq>=0.0.0",
]
